# filecount

./: Cargo.toml  README.md
src/: analysis.rs  extract.rs  hash.rs  lib.rs  main.rs  memory.rs  segmentation.rs  unicode.rs  xml_extensions.rs  zip_extensions.rs
src/default_extractors/: docx.rs  html.rs  json.rs  mod.rs  pptx.rs  txt.rs  xliff.rs  xlsx.rs  xml.rs
