[package]
name = "filecount"
authors = ["Mathijs Sonnemans <mathijs@tech-mason.com>"]
version = "0.1.0"
edition = "2021"
keywords = ["translation", "analyis", "tmx", "word", "count"]
categories = ["localization", "internationalization", "text-processing"]
description= "A modern high-performance open source file analysis library for automating localization tasks."
readme= "README.md"
repository="https://github.com/babblebase/filecount"
license="Apache-2.0"
homepage="https://filecount.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.10.0"
roxmltree = "0.15.0"
zip = {version = "0.6.2", default-features = false, features = [ "deflate" ] }
serde = { version = "1.0.145", features = ["derive"] }
derive_more = "0.99.17"
infer = "0.9.0"
serde_json = "1.0.85"
html_parser = "0.6.3"